# vcard

./: .env  .gitignore  .htaccess  FEATURE IMPLEMENTATION ROADMAP.md  README.md  SaaS Roadmap.md  deploy.sh  manage.py  passenger_wsgi_dev.py  pyproject.toml  requirements-local.txt  requirements.txt
.github/workflows/: deploy-dev.yml
cards/: admin.py  auth_forms.py  context_processors.py  forms.py  models.py  urls.py  utils.py  views.py  widgets.py
cards/migrations/: 0001_initial.py  0002_countrycode_businesscard_accent_color_and_more.py  0003_businesscard_owner_alter_businesscard_accent_color_and_more.py  0004_remove_businesscard_owner_and_more.py  0005_businesscard_owner_alter_businesscard_accent_color_and_more.py  0006_cardinteraction.py  0007_add_organization_models.py  0008_backfill_organizations.py  0009_add_cardlead.py  0010_activitylog_usersettings.py
cms/: blocks.py  models.py
cms/migrations/: 0001_initial.py  0002_initial_pages.py
html/: analytics.html  create_card.html  dashboard.html  landing.html  login.html  my_cards.html  profile_settings.html  public_card_view.html
templates/auth/: _preview_card.html  accept_invite.html  base.html  billing.html  create_card.html  dashboard.html  delete_card.html  edit_card.html  leads_inbox.html  login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  profile.html  register.html  simulate_payment.html  team.html  upgrade.html
tests/: test_cms_pages.py
vcard_project/: asgi.py  settings.py  settings_dev.py  settings_production.py  urls.py  wsgi.py
(+25 files in other folders)
