[project]
name = "vcard"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2,<6",
    "djangorestframework>=3.17",
    "wagtail>=6.4,<7",
    "pillow>=9.1.0,<12",
    "qrcode[pil]>=8.2",
    "python-decouple>=3.8",
    "psycopg2-binary>=2.9.12",
    "vobject>=0.9.6",
    "gunicorn>=26",
    "whitenoise>=6.7",
    "requests>=2.34",
    "django-crispy-forms>=2.6",
    "crispy-bootstrap5>=2026.3",
    "python-slugify>=8",
    "stripe>=11",
    "segno>=1.6.6",
    "ua-parser>=1.0.1",
    "user-agents>=2.2.0",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.2",
]
